<resources>
    <string name="app_name">biratproject</string>
    <string name="home">Home</string>
    <string name="homwtwo">homwtwo</string>
    <string name="house">house</string>
    <string name="homethree">homethree</string>
    <string name="homefour">homefour</string>
    <string name="popular_artists">Popular Artists</string>
    <string name="see_all">SEE ALL</string>
    <string name="recently_viewed_artists">Recently Viewed Artists</string>
    <string name="saurav">Saurav</string>
    <string name="birat">Birat</string>
    <string name="satyam">Satyam</string>
    <string name="sijan">Sijan</string>
    <string name="mostreknown_artists">MostReknown Artists</string>
    <string name="artists_of_kalamandu">Artists of kalamandu</string>
</resources>