<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">



        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/profile_toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/search_icon"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/love" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_below="@id/app_bar_layout_search"
        />


    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout_search"
        android:layout_above="@+id/bottomNavigationView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/text_horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/app_bar_layout_search"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                tools:ignore="NotSibling">

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/popular_artists"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:text="@string/see_all"
                    android:textColor="@color/white"
                    android:textStyle="normal" />
            </LinearLayout>


    <LinearLayout
        android:id="@+id/first_image"
        android:layout_below="@+id/text_horizontal"

        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="1dp"
        android:weightSum="2"
        android:background="@color/black"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/satyam"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:shapeAppearanceOverlay="@style/roundImageview">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/birat"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:shapeAppearanceOverlay="@style/roundImageview">
        </com.google.android.material.imageview.ShapeableImageView>

    </LinearLayout>






            <LinearLayout
                android:id="@+id/second_text_horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/first_image"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/recently_viewed_artists"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:text="@string/see_all"
                    android:textColor="@color/white"
                    android:textStyle="normal" />
            </LinearLayout>




    <LinearLayout
        android:id="@+id/second_image_horizontal"
        android:layout_below="@+id/second_text_horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="1dp"
        android:weightSum="2"
        android:background="@color/black"
        android:orientation="horizontal"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/sauravtwo"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:shapeAppearanceOverlay="@style/roundImageview">
        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/sijan"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:shapeAppearanceOverlay="@style/roundImageview">
        </com.google.android.material.imageview.ShapeableImageView>

    </LinearLayout>

            <LinearLayout
                android:id="@+id/third_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/second_image_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/artists_of_kalamandu"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:text="@string/see_all"
                    android:textColor="@color/white"
                    android:textStyle="normal" />

            </LinearLayout>


            <HorizontalScrollView
                android:id="@+id/horiscroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/third_text"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"

                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="100dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:src="@drawable/saurav" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="7dp"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/saurav"
                                android:textColor="#7CeF94"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="100dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:src="@drawable/satyam" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="7dp"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/satyam"
                                android:textColor="#7CeF94"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="100dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:src="@drawable/birat" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="7dp"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/birat"
                                android:textColor="#7CeF94"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/black"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="100dp"
                                android:layout_height="120dp"
                                android:layout_gravity="center_vertical|center_horizontal"
                                android:src="@drawable/sijan" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="7dp"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/sijan"
                                android:textColor="#7CeF94"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </HorizontalScrollView>



        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/nav_menu"
        app:itemIconSize="35dp"
        app:itemBackground="@color/black"
        app:itemTextColor="@color/purple_700"
        app:itemIconTint="@color/white" />

</RelativeLayout>